# mash

./: .clang-format  .gitignore  LICENSE  execStream.proto  makefile  meson.build  readme.md  syntax
daemon/: Value.go  executor.go  executor_test.go  go.mod  go.sum  main.go  mbyr.go  mbyr_test.go  queue.go  queue_test.go  signal.go  signal_test.go  stack.go  stack_map.go  stack_map_test.go  stack_test.go
daemon/runtime/: executor.go  executor_test.go  queue.go  queue_test.go  signal.go  signal_test.go  stack.go  stack_map.go  stack_map_test.go  stack_test.go  value.go
examples/: 1-helloworld.msh  2-maths.msh  3-control_flow.msh  4-processes.msh  4-signals.msh  5-signals.msh  6-distribution.msh  7-embedded_sh.msh
interpreter/: .clang-format  meson.build
interpreter/src/: common.cpp  common.hpp  main.cpp  middleend.cpp  middleend.hpp
interpreter/src/frontend/: ast.cpp  ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  tokens.hpp
scripts/: debug.sh  script_core.sh  test_helper.sh
src/: builtins.cpp  builtins.h  builtins.hpp  common.cpp  common.h  common.hpp  evaluation.cpp  lexer.cpp  lexer.h  main.cpp  middleend.hpp  parser.cpp  parser.h  parser.hpp  pch.h  pch.hpp  tokens.hpp
src/frontend/: lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  tokens.hpp
test/: large_loop.msh  maths.msh  nested_flow.msh  simple_flow.msh  test_helper.sh  var_asmt.msh
